--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -3,7 +3,7 @@
       xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
-    <meta charset="UTF-8">
+    <div th:replace="fragments/head :: header"></div>
     <title>Pergunta XYZ</title>
 </head>
 <body>
