Fix: tamanho máximo do título.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -33,7 +33,7 @@
                         <small>Não solucionada</small>
                     </div>
                     <div class="question-title">
-                        <a href="/question">Título da pergunta</a>
+                        <a href="/question">Lorem ipsum dolor sit amet, consectetur tincidunt.</a>
                     </div>
                     <div class="question-text">
                         <p>No prédio em que sou síndico está tendo. O zelador que está trabal...</p>
@@ -61,7 +61,7 @@
                         <small>Não solucionada</small>
                     </div>
                     <div class="question-title">
-                        <a href="/question">Título da pergunta bem legal muito bacana show</a>
+                        <a href="/question">Lorem ipsum dolor sit amet, consectetur tincidunt.</a>
                     </div>
                     <div class="question-text">
                         <p>No prédio em que sou síndico está tendo uma discussão durante as reuniões sobre a presença constante do zelador durante o horário de almoço da portaria. O zelador que está trabal...</p>
@@ -89,7 +89,7 @@
                         <small>Solucionada</small>
                     </div>
                     <div class="question-title">
-                        <a href="/question">Título da pergunta</a>
+                        <a href="/question">Lorem ipsum dolor sit amet, consectetur tincidunt.</a>
                     </div>
                     <div class="question-text">
                         <p>No prédio em que sou síndico está tendo uma discussão durante as reuniões sobre a presença constante do zelador durante o horário de almoço da portaria. O zelador que está trabal...</p>
