feature:@squad3 - Ajusta os dados de pontuaçao e membro desde para dados mocados

--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -20,14 +20,14 @@
                     </div>
                     <div class="col">
                         <h2 class="title" th:text="${user.getName()}">Teste</h2>
-                        <small class="subtitle"><b>Pontuação: </b><span th:text="${user.getName()}"></span></small>
-                        <small class="subtitle"><b>Membro desde: </b><span th:text="${user.getName()}"></span></small>
+                        <small class="subtitle"><b>Pontuação: </b><span>20 pontos</span></small>
+                        <small class="subtitle"><b>Membro desde: </b><span>16/09/2020</span></small>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col">
                         <h2 class="title">Biografia</h2>
-                        <small>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</small>
+                        <small th:text="${user.getBio()}"></small>
                     </div>
                 </div>
             </div>
