--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -8,77 +8,79 @@
     <link rel="stylesheet" th:href="@{/css/index.css}">
 </head>
 <body>
-    <div th:insert="fragments/header.html"></div>
-    <div class="container">
-        <div class="row">
-            <div class="col-4">
-                <div class="row-4">
-                    <div class="col-4 align-center">
-                        <div style="width: 7vw; height: 7vw">
-                            <div class="avatar"></div>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <h2 class="title" th:text="${user.getName()}">Teste</h2>
-                        <small class="subtitle"><b>Pontuação: </b><span>20 pontos</span></small>
-                        <small class="subtitle"><b>Membro desde: </b><span>16/09/2020</span></small>
+<div th:insert="fragments/header.html"></div>
+<div th:if="${user == null}">
+    <h1>Usuário não encontrado</h1>
+</div>
+<div class="container" th:if="${user}">
+    <div class="row">
+        <div class="col-4">
+            <div class="row-4">
+                <div class="col-4 align-center">
+                    <div style="width: 7vw; height: 7vw">
+                        <div class="avatar"></div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col">
-                        <h2 class="title">Biografia</h2>
-                        <small th:text="${user.getBio()}"></small>
-                    </div>
+                <div class="col">
+                    <h2 class="title" th:text="${user.getName()}">Teste</h2>
+                    <small class="subtitle"><b>Pontuação: </b><span>20 pontos</span></small>
+                    <small class="subtitle"><b>Membro desde: </b><span>16/09/2020</span></small>
                 </div>
             </div>
-            <div class="question-card-divider"></div>
-            <div class="col-8">
-                <div class="row">
-                    <div class="col align-center">
-                        <h2 class="title">Editar Perfil</h2>
-                        <div class="col-9">
-                            <div class="row">
-                                <div class="col-4">
-                                    <div style="width: 9vw; height: 9vw">
-                                        <div class="avatar justify-center align-center link">
-                                            <img width="40%" src="/img/newpicture.svg" alt="Adicionar nova foto">
-                                        </div>
+            <div class="row">
+                <div class="col">
+                    <h2 class="title">Biografia</h2>
+                    <small th:text="${user.getBio()}"></small>
+                </div>
+            </div>
+        </div>
+        <div class="question-card-divider"></div>
+        <div class="col-8">
+            <div class="row">
+                <div class="col align-center">
+                    <h2 class="title">Editar Perfil</h2>
+                    <div class="col-9">
+                        <div class="row">
+                            <div class="col-4">
+                                <div style="width: 9vw; height: 9vw">
+                                    <div class="avatar justify-center align-center link">
+                                        <img width="40%" src="/img/newpicture.svg" alt="Adicionar nova foto">
                                     </div>
                                 </div>
-                                <div class="col align-center">
+                            </div>
+                            <div class="col align-center">
+                                <div class="form-control">
                                     <div class="form-control">
-                                        <div class="form-control">
-                                            <label for="name" style="font-size: 10pt">Nome</label>
-                                            <input type="text" name="name" id="name"/>
-                                        </div>
+                                        <label for="name" style="font-size: 10pt">Nome</label>
+                                        <input type="text" name="name" id="name"/>
                                     </div>
+                                </div>
 
+                                <div class="form-control">
                                     <div class="form-control">
-                                        <div class="form-control">
-                                            <label for="email" style="font-size: 10pt">Email</label>
-                                            <input type="text" name="name" id="email"/>
-                                        </div>
+                                        <label for="email" style="font-size: 10pt">Email</label>
+                                        <input type="text" name="name" id="email"/>
                                     </div>
+                                </div>
 
+                                <div class="form-control">
                                     <div class="form-control">
-                                        <div class="form-control">
-                                            <label for="bio" style="font-size: 10pt">Bio</label>
-                                            <textarea type="text" name="name" id="bio"></textarea>
-                                        </div>
+                                        <label for="bio" style="font-size: 10pt">Bio</label>
+                                        <textarea type="text" name="name" id="bio"></textarea>
                                     </div>
+                                </div>
 
+                                <div class="form-control">
                                     <div class="form-control">
-                                        <div class="form-control">
-                                            <label for="currentPassword" style="font-size: 10pt">Senha atual</label>
-                                            <input type="text" name="name" id="currentPassword"/>
-                                        </div>
+                                        <label for="currentPassword" style="font-size: 10pt">Senha atual</label>
+                                        <input type="text" name="name" id="currentPassword"/>
                                     </div>
+                                </div>
 
+                                <div class="form-control">
                                     <div class="form-control">
-                                        <div class="form-control">
-                                            <label for="newPassword" style="font-size: 10pt">Nova senha</label>
-                                            <input type="text" name="name" id="newPassword"/>
-                                        </div>
+                                        <label for="newPassword" style="font-size: 10pt">Nova senha</label>
+                                        <input type="text" name="name" id="newPassword"/>
                                     </div>
                                 </div>
                             </div>
@@ -88,6 +90,7 @@
             </div>
         </div>
     </div>
+</div>
 
 
 <!--<div th:if="${user}">-->
@@ -110,8 +113,6 @@
 <!--    <h>TODO</h>-->
 <!--    <hr/>-->
 <!--</div>-->
-<div th:if="!${user}">
-    <h1>Usuário não encontrado</h1>
-</div>
+
 </body>
 </html>
