Merge: alterações e adições feitas pelo Guilherme Carvalho.

--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -4,29 +4,34 @@
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <div th:replace="fragments/head :: header"></div>
+    <link rel="stylesheet" th:href="@{/css/question.css}">
     <title>Pergunta XYZ</title>
 </head>
 <body>
     <div th:insert="fragments/header.html"></div>
-    <div class="container bg-offwhite justify-center">
+    <div class="justify-center">
         <main class="main-content">
-            <div class="col-6" >
-                <div class="question-page-card">
-                    <div class="card-left">
-                        <img src="img/user.svg" alt="Imagem do perfil do usuário"/>
-                        <div class="name-last-access">
-                            <p>Bruno Almeida</p>
-                            <small>2 horas</small>
-                        </div>
+            <div class="question-page-card">
+                <div class="card-left">
+                    <img src="img/user.svg" alt="Imagem do perfil do usuário"/>
+                    <div class="name-last-access">
+                        <p>Bruno Almeida</p>
+                        <small>2 horas</small>
                     </div>
-
-                    <div class="card-right">
-                        <div class="question-title">
-                            <a href="/question">Título da pergunta</a>
-                        </div>
-                        <div class="question-text">
-                            <p>No prédio em que sou síndico está tendo uma discussão durante as reuniões sobre a presença constante do zelador durante o horário de almoço da portaria. O zelador que está trabalNo prédio em que sou síndico está tendo uma discussão durante as reuniões sobre a presença constante do zelador durante o horário de almoço da portaria. O zelador que está trabal...No prédio em que sou síndico está tendo uma discussão durante as reuniões sobre a presença constante do zelador durante o horário de almoço da portaria. O zelador que está trabal...No prédio em que sou síndico está tendo uma discussão durante as reuniões sobre a presença constante do zelador durante o horário de almoço da portaria. O zelador que está trabal...</p>
-                        </div>
+                </div>
+                <div class="card-right">
+                    <div class="question-title">
+                        <a href="/question">Título da pergunta</a>
+                    </div>
+                    <div class="question-text">
+                        <p>No prédio em que sou síndico está tendo uma discussão durante as reuniões sobre a presença
+                            constante do zelador durante o horário de almoço da portaria. O zelador que está trabalNo prédio
+                            em que sou síndico está tendo uma discussão durante as reuniões sobre a presença constante do
+                            zelador durante o horário de almoço da portaria. O zelador que está trabal...No prédio em que
+                            sou síndico está tendo uma discussão durante as reuniões sobre a presença constante do zelador
+                            durante o horário de almoço da portaria. O zelador que está trabal...No prédio em que sou
+                            síndico está tendo uma discussão durante as reuniões sobre a presença constante do zelador
+                            durante o horário de almoço da portaria. O zelador que está trabal...</p>
                     </div>
                 </div>
             </div>
@@ -37,7 +42,8 @@
             </div>
             <div class="comment-card">
                 <div class="comment-left">
-                    <small>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed varius mi facilisis felis dapibus commodo. Quisque fringilla elit sed augue ultrices tempor. Proin eu metus.</small>
+                    <small>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed varius mi facilisis felis dapibus
+                        commodo. Quisque fringilla elit sed augue ultrices tempor. Proin eu metus.</small>
                 </div>
                 <div class="comment-right">
                     <small>Bruno Silva</small>
