--- a/src/main/resources/static/css/question.css
+++ b/src/main/resources/static/css/question.css
@@ -1,6 +1,8 @@
 .main-content{
+    display: flex;
     flex-direction: column;
     width: 50vw;
+    margin-top: 2rem;
 }
 
 .answer-textarea-container{
@@ -51,7 +53,6 @@
     display: flex;
     border-radius: 10px;
     flex-direction: row;
-    width: 70%;
     box-shadow: 0px 0px 10px 3px rgba(0,0,0,0.25);
     margin-bottom: 2em;
     justify-content: space-between;
