--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -22,7 +22,7 @@
             <button onclick="location.href='/signin'">Fazer uma pergunta</button>
         </div>
     </div>
-    <div class="container row">
+    <div class="row">
         <aside>
         </aside>
         <main class="main-content">
