--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -23,6 +23,23 @@ button{
     cursor: pointer;
 }
 
+.avatar {
+    width: 100%;
+    height: 100%;
+    background-color: lightgray;
+    border-radius: 50%;
+}
+
+.question-card-divider{
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+    height: 75%;
+    border-left:1px solid #BEBEBE;
+    border-right:1px solid #BEBEBE;
+    margin-left: 16px;
+}
+
 .form-control{
     display: flex;
     flex-direction: column;
@@ -59,6 +76,11 @@ button{
     font-size: 10pt;
 }
 
+.form-control label {
+    font-size: 10pt;
+    font-weight: bold;
+}
+
 .flex {
     display: flex;
 }
@@ -81,6 +103,21 @@ button{
 .justify-flex-end {
     display: flex;
     justify-content: flex-end;
+}
+
+.justify-space-between {
+    display: flex;
+    justify-content: space-between;
+}
+
+.justify-space-around {
+    display: flex;
+    justify-content: space-around;
+}
+
+.align-start {
+    display: flex;
+    align-items: start;
 }
 
 .align-center {
@@ -171,7 +208,7 @@ button{
     display: flex;
     flex-direction: row;
     width: 100%;
-    height: 100%;
+    /*height: auto;*/
 }
 
 .row-12 {
@@ -246,6 +283,38 @@ button{
     flex-direction: row;
 }
 
+.px-1 {
+    padding: 0 4px
+}
+
+.px-2 {
+    padding: 0 8px
+}
+
+.px-3 {
+    padding: 0 12px
+}
+
+.px-4 {
+    padding: 0 16px
+}
+
+.mx-1 {
+    margin: 0 4px
+}
+
+.mx-2 {
+    margin: 0 8px
+}
+
+.mx-3 {
+    margin: 0 12px
+}
+
+.mx-4 {
+    margin: 0 16px
+}
+
 .link:hover {
     cursor: pointer;
 }
@@ -257,10 +326,32 @@ button{
     padding-top: 5%;
 }
 
+.status-pill{
+    border-radius: 500px;
+    display: flex;
+    height: 1.5rem;
+    width: 6vw;
+    align-items: center;
+    justify-content: center;
+}
+.status-pill small{
+    color: #FFFFFF;
+    font-weight: bolder;
+    font-size: 0.7rem;
+}
+
 .bg-offwhite{
     background-color: #F4F4F4;
 }
 
 .bg-danger{
     background-color: #D83D3D;
+}
+
+.bg-question{
+    background-color: #8833CB;
+}
+
+.bg-answer{
+    background-color: #48CB33;
 }
