--- a/src/main/resources/templates/userEdit.html
+++ b/src/main/resources/templates/userEdit.html
@@ -5,113 +5,145 @@
     <meta charset="UTF-8">
     <title>Usuário</title>
     <link rel="stylesheet" th:href="@{/css/styles.css}">
-    <link rel="stylesheet" th:href="@{/css/index.css}">
+    <link rel="stylesheet" th:href="@{/css/userEdit.css}">
 </head>
 <body>
-    <div th:insert="fragments/header.html"></div>
-    <div class="container">
-        <div class="row">
-            <div class="col-4">
-                <div class="row-4">
-                    <div class="col-4 align-center">
-                        <div style="width: 7vw; height: 7vw">
-                            <div class="avatar"></div>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <h2 class="title" th:text="${user.getName()}">Teste</h2>
-                        <small class="subtitle"><b>Pontuação: </b><span>20 pontos</span></small>
-                        <small class="subtitle"><b>Membro desde: </b><span>16/09/2020</span></small>
+<div th:insert="fragments/header.html"></div>
+<div th:if="${user == null}">
+    <h1>Usuário não encontrado</h1>
+</div>
+
+<div class="container" th:if="${user}">
+    <div class="row-12">
+        <div class="col-4">
+            <div class="row-3">
+                <div class="col-4 align-center">
+                    <div style="width: 7vw; height: 7vw">
+                        <div class="avatar"></div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col">
-                        <h2 class="title">Biografia</h2>
-                        <small th:text="${user.getBio()}"></small>
-                    </div>
+                <div class="col px-2">
+                    <h2 class="title" th:text="${user.getName()}"></h2>
+                    <small class="subtitle"><b>Pontuação: </b><span>20 pontos</span></small>
+                    <small class="subtitle"><b>Membro desde: </b><span>16/09/2020</span></small>
                 </div>
             </div>
-            <div class="question-card-divider"></div>
-            <div class="col-8">
-                <div class="row">
-                    <div class="col align-center">
-                        <h2 class="title">Editar Perfil</h2>
-                        <div class="col-9">
-                            <div class="row">
-                                <div class="col-4">
-                                    <div style="width: 9vw; height: 9vw">
-                                        <div class="avatar justify-center align-center link">
-                                            <img width="40%" src="/img/newpicture.svg" alt="Adicionar nova foto">
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col align-center">
-                                    <div class="form-control">
-                                        <div class="form-control">
-                                            <label for="name" style="font-size: 10pt">Nome</label>
-                                            <input type="text" name="name" id="name"/>
-                                        </div>
-                                    </div>
-
-                                    <div class="form-control">
-                                        <div class="form-control">
-                                            <label for="email" style="font-size: 10pt">Email</label>
-                                            <input type="text" name="name" id="email"/>
-                                        </div>
-                                    </div>
-
-                                    <div class="form-control">
-                                        <div class="form-control">
-                                            <label for="bio" style="font-size: 10pt">Bio</label>
-                                            <textarea type="text" name="name" id="bio"></textarea>
-                                        </div>
-                                    </div>
-
-                                    <div class="form-control">
-                                        <div class="form-control">
-                                            <label for="currentPassword" style="font-size: 10pt">Senha atual</label>
-                                            <input type="text" name="name" id="currentPassword"/>
-                                        </div>
-                                    </div>
-
-                                    <div class="form-control">
-                                        <div class="form-control">
-                                            <label for="newPassword" style="font-size: 10pt">Nova senha</label>
-                                            <input type="text" name="name" id="newPassword"/>
-                                        </div>
-                                    </div>
-                                </div>
+            <div class="row">
+                <div class="col">
+                    <h2 class="title">Biografia</h2>
+                    <small th:text="${user.getBio()}"></small>
+                </div>
+            </div>
+            <br>
+            <div class="row justify-center">
+                <div class="status-pill bg-answer mx-3">
+                    <small>21 respostas</small>
+                </div>
+                <div class="status-pill bg-question">
+                    <small>7 perguntas</small>
+                </div>
+            </div>
+        </div>
+        <div class="question-card-divider"></div>
+        <div class="col-8">
+            <h2 class="title justify-center">Editar Perfil</h2>
+            <br>
+            <div class="row">
+                <div class="row px-4">
+                    <div class="col-5">
+                        <div style="width: 9vw; height: 9vw">
+                            <div class="avatar justify-center align-center link">
+                                <img width="40%" src="/img/newpicture.svg" alt="Adicionar nova foto">
                             </div>
                         </div>
                     </div>
+
+                    <div class="col px-4">
+                        <div class="row justify-space-between">
+                            <div class="form-control">
+                                <label for="name">Nome</label>
+                                <input type="text" name="name" id="name"/>
+                            </div>
+                            <div class="form-control">
+                                <label for="email">Email</label>
+                                <input type="text" name="email" id="email"/>
+                            </div>
+                        </div>
+
+                        <div class="row justify-space-between">
+                            <div class="form-control">
+                                <label for="company">Empresa</label>
+                                <input type="text" name="company" id="company"/>
+                            </div>
+                            <div class="form-control">
+                                <label for="website">Site</label>
+                                <input type="text" name="website" id="website"/>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col">
+                                <div class="form-control">
+                                    <label for="bio">Bio</label>
+                                    <textarea type="text" name="bio" id="bio"></textarea>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row justify-space-between">
+                            <div class="form-control">
+                                <label for="curr-password">Senha atual</label>
+                                <input type="password" name="curr-password" id="curr-password"/>
+                            </div>
+                            <div class="form-control">
+                                <label for="new-password">Nova senha</label>
+                                <input type="password" name="new-password" id="new-password"/>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <!--                        <div class="col align-center">-->
+                    <!--                            <div class="form-control">-->
+                    <!--                                <div class="form-control">-->
+                    <!--                                    <label for="name" style="font-size: 10pt">Nome</label>-->
+                    <!--                                    <input type="text" name="name" id="name"/>-->
+                    <!--                                </div>-->
+                    <!--                            </div>-->
+
+                    <!--                            <div class="form-control">-->
+                    <!--                                <div class="form-control">-->
+                    <!--                                    <label for="email" style="font-size: 10pt">Email</label>-->
+                    <!--                                    <input type="text" name="name" id="email"/>-->
+                    <!--                                </div>-->
+                    <!--                            </div>-->
+
+                    <!--                            <div class="form-control">-->
+                    <!--                                <div class="form-control">-->
+                    <!--                                    <label for="bio" style="font-size: 10pt">Bio</label>-->
+                    <!--                                    <textarea type="text" name="name" id="bio"></textarea>-->
+                    <!--                                </div>-->
+                    <!--                            </div>-->
+
+                    <!--                            <div class="form-control">-->
+                    <!--                                <div class="form-control">-->
+                    <!--                                    <label for="currentPassword" style="font-size: 10pt">Senha atual</label>-->
+                    <!--                                    <input type="text" name="name" id="currentPassword"/>-->
+                    <!--                                </div>-->
+                    <!--                            </div>-->
+
+                    <!--                            <div class="form-control">-->
+                    <!--                                <div class="form-control">-->
+                    <!--                                    <label for="newPassword" style="font-size: 10pt">Nova senha</label>-->
+                    <!--                                    <input type="text" name="name" id="newPassword"/>-->
+                    <!--                                </div>-->
+                    <!--                            </div>-->
                 </div>
             </div>
         </div>
     </div>
-
-
-<!--<div th:if="${user}">-->
-<!--    <h>Id do usuário:</h>-->
-<!--    <h th:text="${user.getId()}"></h>-->
-<!--    <p></p>-->
-<!--    <h>Nome Completo:</h>-->
-<!--    <h th:text="${user.getName()}"></h>-->
-<!--    <p></p>-->
-<!--    <h>E-Mail:</h>-->
-<!--    <h th:text="${user.getEmail()}"></h>-->
-<!--    <p></p>-->
-<!--    <h>Biografia:</h>-->
-<!--    <h th:text="${user.getBio()}"></h>-->
-<!--    <p></p>-->
-<!--    <h>Pontuação:</h>-->
-<!--    <h>TODO</h>-->
-<!--    <p></p>-->
-<!--    <h>Membro desde:</h>-->
-<!--    <h>TODO</h>-->
-<!--    <hr/>-->
-<!--</div>-->
-<div th:if="!${user}">
-    <h1>Usuário não encontrado</h1>
 </div>
+</div>
+
 </body>
 </html>
